@@ -1,3 +1,11 @@
+2004-08-11  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* smtp.el (smtp-progress-message-format): New user option.
+	(smtp-primitive-data): Show progress message.
+	(smtp-parse-progress-message-format): New function.
+	(smtp-show-progress-message): New function.
+	(smtp-deduce-address-list): Use insert instead of insert-string.
+
 2004-07-27  Yoichi NAKAYAMA  <yoichi@geiin.org>
 
 	* mel-g.el (gzip64-external-encoder): Change default value to
